--- a/Ellipsis_Computer_Vision_Training_and_Testing.ipynb
+++ b/Ellipsis_Computer_Vision_Training_and_Testing.ipynb
@@ -856,7 +856,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'/content/drive/MyDrive/PHASE_1_TRAINING/DRONE/drone_06/06_15fps.avi'"
+              "'path here'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
