--- a/server/YOLO_Initialization_Commands.ipynb
+++ b/server/YOLO_Initialization_Commands.ipynb
@@ -1,8 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setting up YOLOv11 by Ultralytics\n",
+    "\n",
+    "For more information refer to: https://github.com/ultralytics/ultralytics\n",
+    "\n",
+    "We used YOLOV11x model for object detection."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -44,6 +55,106 @@
    "source": [
     "# Display GPU info\n",
     "!nvidia-smi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: ultralytics in c:\\users\\hadiy\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (8.3.63)\n",
+      "Requirement already satisfied: numpy>=1.23.0 in c:\\users\\hadiy\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from ultralytics) (2.0.2)\n",
+      "Requirement already satisfied: matplotlib>=3.3.0 in c:\\users\\hadiy\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from ultralytics) (3.9.4)\n",
+      "Requirement already satisfied: opencv-python>=4.6.0 in c:\\users\\hadiy\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from ultralytics) (4.11.0.86)\n",
+      "Requirement already satisfied: pillow>=7.1.2 in c:\\users\\hadiy\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from ultralytics) (11.1.0)\n",
+      "Requirement already satisfied: pyyaml>=5.3.1 in c:\\users\\hadiy\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from ultralytics) (6.0.2)\n",
+      "Requirement already satisfied: requests>=2.23.0 in c:\\users\\hadiy\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from ultralytics) (2.32.3)\n",
+      "Requirement already satisfied: scipy>=1.4.1 in c:\\users\\hadiy\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from ultralytics) (1.13.1)\n",
+      "Requirement already satisfied: torch>=1.8.0 in c:\\users\\hadiy\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from ultralytics) (2.5.1)\n",
+      "Requirement already satisfied: torchvision>=0.9.0 in c:\\users\\hadiy\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from ultralytics) (0.20.1)\n",
+      "Requirement already satisfied: tqdm>=4.64.0 in c:\\users\\hadiy\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from ultralytics) (4.67.1)\n",
+      "Requirement already satisfied: psutil in c:\\users\\hadiy\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from ultralytics) (6.1.1)\n",
+      "Requirement already satisfied: py-cpuinfo in c:\\users\\hadiy\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from ultralytics) (9.0.0)\n",
+      "Requirement already satisfied: pandas>=1.1.4 in c:\\users\\hadiy\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from ultralytics) (2.2.3)\n",
+      "Requirement already satisfied: seaborn>=0.11.0 in c:\\users\\hadiy\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from ultralytics) (0.13.2)\n",
+      "Requirement already satisfied: ultralytics-thop>=2.0.0 in c:\\users\\hadiy\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from ultralytics) (2.0.14)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\hadiy\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from matplotlib>=3.3.0->ultralytics) (1.3.0)\n",
+      "Requirement already satisfied: cycler>=0.10 in c:\\users\\hadiy\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from matplotlib>=3.3.0->ultralytics) (0.12.1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\hadiy\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from matplotlib>=3.3.0->ultralytics) (4.55.3)\n",
+      "Requirement already satisfied: kiwisolver>=1.3.1 in c:\\users\\hadiy\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from matplotlib>=3.3.0->ultralytics) (1.4.7)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\hadiy\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from matplotlib>=3.3.0->ultralytics) (24.2)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in c:\\users\\hadiy\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from matplotlib>=3.3.0->ultralytics) (3.2.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\hadiy\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from matplotlib>=3.3.0->ultralytics) (2.9.0.post0)\n",
+      "Requirement already satisfied: importlib-resources>=3.2.0 in c:\\users\\hadiy\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from matplotlib>=3.3.0->ultralytics) (6.5.2)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\hadiy\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from pandas>=1.1.4->ultralytics) (2024.2)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\hadiy\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from pandas>=1.1.4->ultralytics) (2024.2)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\hadiy\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from requests>=2.23.0->ultralytics) (3.4.1)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\hadiy\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from requests>=2.23.0->ultralytics) (3.10)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\hadiy\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from requests>=2.23.0->ultralytics) (2.3.0)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\hadiy\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from requests>=2.23.0->ultralytics) (2024.12.14)\n",
+      "Requirement already satisfied: filelock in c:\\users\\hadiy\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from torch>=1.8.0->ultralytics) (3.16.1)\n",
+      "Requirement already satisfied: typing-extensions>=4.8.0 in c:\\users\\hadiy\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from torch>=1.8.0->ultralytics) (4.12.2)\n",
+      "Requirement already satisfied: networkx in c:\\users\\hadiy\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from torch>=1.8.0->ultralytics) (3.2.1)\n",
+      "Requirement already satisfied: jinja2 in c:\\users\\hadiy\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from torch>=1.8.0->ultralytics) (3.1.5)\n",
+      "Requirement already satisfied: fsspec in c:\\users\\hadiy\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from torch>=1.8.0->ultralytics) (2024.12.0)\n",
+      "Requirement already satisfied: sympy==1.13.1 in c:\\users\\hadiy\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from torch>=1.8.0->ultralytics) (1.13.1)\n",
+      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in c:\\users\\hadiy\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from sympy==1.13.1->torch>=1.8.0->ultralytics) (1.3.0)\n",
+      "Requirement already satisfied: colorama in c:\\users\\hadiy\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from tqdm>=4.64.0->ultralytics) (0.4.6)\n",
+      "Requirement already satisfied: zipp>=3.1.0 in c:\\users\\hadiy\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from importlib-resources>=3.2.0->matplotlib>=3.3.0->ultralytics) (3.21.0)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\hadiy\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from python-dateutil>=2.7->matplotlib>=3.3.0->ultralytics) (1.17.0)\n",
+      "Requirement already satisfied: MarkupSafe>=2.0 in c:\\users\\hadiy\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.9_qbz5n2kfra8p0\\localcache\\local-packages\\python39\\site-packages (from jinja2->torch>=1.8.0->ultralytics) (3.0.2)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 24.3.1 -> 25.0.1\n",
+      "[notice] To update, run: C:\\Users\\hadiy\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Install Ultralytics\n",
+    "%pip install ultralytics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ultralytics 8.3.63  Python-3.9.13 torch-2.5.1+cpu CPU (13th Gen Intel Core(TM) i9-13900HX)\n",
+      "Setup complete  (32 CPUs, 31.7 GB RAM, 433.3/952.6 GB disk)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Import and check Ultralytics configuration\n",
+    "import ultralytics\n",
+    "ultralytics.checks()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import YOLO class from Ultralytics library\n",
+    "from ultralytics import YOLO\n",
+    "#Import Image class to display images within Python environment\n",
+    "from IPython.display import Image"
    ]
   }
  ],
